apps/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-httproute
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure & Monitoring
    gethomepage.dev/name: Grafana
    gethomepage.dev/href: "https://grafana.home.alden.ai"
    gethomepage.dev/description: Dashboards & Visualization
    gethomepage.dev/icon: grafana.svg
    gethomepage.dev/app: grafana # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/pod-selector: app=grafana
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - grafana.home.alden.ai
  rules:
  - backendRefs:
    - name: grafana-service
      port: 3000
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
