apps/grafana/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana-virtualservice
spec:
  hosts:
    - grafana.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana-service.grafana.svc.cluster.local
            port:
              number: 3000
